Center edit link

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       max-width: 632px;
       line-height: 1.6;
     }
+    .text-center {
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -65,7 +68,7 @@
   </main>
   <footer>
     <p>This page was built by <a href="https://sia.codes/">Sia</a>, but the tools in it were not. Check out those awesome creators in the links above!</p>
-    <p><small><a href="https://github.com/siakaramalegos/bookmarklets">Edit this on GitHub</a></small></p>
+    <p class="text-center"><small><a href="https://github.com/siakaramalegos/bookmarklets">Edit this on GitHub</a></small></p>
   </footer>
 </body>
 </html>
